<resources>
    <string name="app_name">AdvancePay</string>
    <string name="powered_by_text">Powered By Pay<b>U</b></string>
    <string name="message_text_apply_screen"><b>Salary ek hafte baad milegi? No problem, Hum hai na :)</b></string>
    <string name="apke_fayede_text"><b>Apke fayede</b></string>
    <string name="apply_button_text">Apply Karein</string>
    <string name="baas_something_went_wrong">Baas Something Went Wrong</string>
    <string name="powered_by_payu">Powered by</string>
    <string name="privacy_policy_link">https://payu.in/privacy-policy</string>
    <string name="terms_condition_link">https://payu.in/blog/wp-content/uploads/2022/05/Advance-Pay-by-PayU-TC.pdf</string>
    <string name="sbm_terms_condition_link">https://payu.in/blog/wp-content/uploads/2022/05/Advance-Pay-by-PayU_Terms-Conditions.pdf</string>
    <string name="app_font_regular">fonts/avenir_regular.ttf</string>
    <string name="app_font_bold">fonts/avenir_bold.ttf</string>
    <string name="app_font_semi_bold">fonts/avenir_semi_bold.ttf</string>
    <string name="app_font_extra_bold">fonts/avenir_extra_bold.ttf</string>
    <string name="apply_karein">Apply Karein</string>
    <string name="verify_mobile_number">Verify mobile number</string>
    <string name="apke_number_pr_bheja_hua_4_number_ka_otp_niche_enter_kariye">Apke number pr bheja hua 4 number ka OTP niche enter kariye.</string>
    <string name="card_delivery_address">Card delivery address</string>
    <string name="card_delivery_tooltip_text">Kripya apna current address bhariye. Apka card issi address pr deliver hoga.</string>
    <string name="pin_code">Pin Code</string>
    <string name="address_house_no_building_street_area">Address(House No.,Building,Street,Area)</string>
    <string name="colony_sector_street">Colony, Sector, Street</string>
    <string name="landmark">Landmark</string>
    <string name="city_district">City/District</string>
    <string name="state">State</string>
    <string name="save">Save</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="wrong_otp_message">Apne galat OTP enter kiya hai. Kripya dobara try kariye ya  OTP resend kariye.</string>
    <string name="account_status">Aapka registered mobile number match nahi ho raha hai.</string>
    <string name="relogin_enter_mobilenumber_message">Kripya apne employer registered phone number se dobara login kariye.</string>
    <string name="complete_kyc">Complete KYC</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_registered_mobile_number">Enter Registered Mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="edit_number">Edit number</string>
    <string name="enter_4_digit_otp">Enter 4 digit OTP</string>
    <string name="agar_apko_otp_nyi_mila_hai">Agar apko OTP nahi mila hai.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_empty_message">OTP field should not be empty</string>
    <string name="not_eligible_advancpay">Sorry, Aap AdvancePay k liye eligible nahi hai.</string>
    <string name="pan_aur_emp_details_not_matched_text">Aapki PAN aur Employee ID details match nahi ho rahi hai.</string>
    <string name="verify_detail_message">Kripya apni details jaanch kr sahi details bhariye</string>
    <string name="apni_details_bhariye">Apni details bhariye</string>
    <string name="full_name_pan_card_k_anusaar">Full Name PAN Card K Anusaar</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="employee_id">Employee ID</string>
    <string name="next">Next</string>
    <string name="kripya_permission_dien">Permissions </string>
    <string name="pan_number_missing_error_message">Kripya sahi PAN number enter kariye.</string>
    <string name="pan_number_info_text">PAN number apko yaha dekhne ko milega</string>
    <string name="employee_id_info_text">Apki employee id apko yaha dekhne ko milegi</string>
    <string name="hum_promise_krte_hai_apka_data_hamare_pass_surakshit_rhega_or_uska_koi_misuse_nhi_hoga">Apka account open krne ke liye humein in permissions ki jarurat hai.</string>
    <string name="location">Location</string>
    <string name="fraud_se_bachane_k_liye">Apke phone ki location jaan kar apko better experience provide krne k liye.</string>
    <string name="sms">SMS</string>
    <string name="phone">Phone</string>
    <string name="privacy_policy"><a href="Privacy Policy ">Privacy Policy</a></string>
    <string name="terms_condition"><a href="User Terms Conditions ">Terms &amp; Conditions</a></string>
    <string name="user_terms_condition">User Terms and Conditions</string>
    <string name="sbm_terms_condition">SBM Terms and Conditions</string>
    <string name="permission_call_message">Apke phone ka IMEI number k liye.
</string>
    <string name="otp_autofill_krn_k_liye_or_scam_s_bachane_k_liye">OTP autofill krne k liye.</string>
    <string name="thik_hai">Thik Hai</string>
    <string name="review_and_submit_details">Review and submit details</string>
    <string name="aadhar_verification">Aadhaar proof</string>
    <string name="update_address_message">Apka address ab badal chuka hai.</string>
    <string name="mobile_empty">Mobile number should not be empty</string>
    <string name="mobile_number_length">Mobile number length should be 10 digit</string>
    <string name="country_code">+91</string>
    <string name="reset_passcode_snackbar_message">Apka passcode reset ho chuka hai.</string>
    <string name="mobile_length_error">Kripya 10 number ka mobile number hi enter kariye</string>
    <string name="resend_otp_message">OTP dobara send kr diya hai.</string>
    <string name="without_permission_message">Bina permission diye aap aage nahi bad payenge. Kripya dobara permission dien.</string>
    <string name="selfie">Selfie</string>
    <string name="step1_text">1</string>
    <string name="step2_text">2</string>
    <string name="step3_text">3</string>
    <string name="step4_text">4</string>
    <string name="step5_text">5</string>
    <string name="start_text">Start</string>
    <string name="continue_text">Continue</string>
    <string name="zero">0</string>
    <string name="twenty_five">25</string>
    <string name="five">5</string>
    <string name="fifty">50</string>
    <string name="six">6</string>
    <string name="four">2</string>
    <string name="two_percent">2%</string>
    <string name="three_percent">3%</string>
    <string name="twenty_four">24%</string>
    <string name="finish_text">Finish</string>
    <string name="gst">GST</string>
    <string name="pan_card_and_employee_details">PAN card and employee details</string>
    <string name="apni_details_jaanchein">Apni Details Jaanchein</string>
    <string name="ha_yeh_sab_sahi_hai">I Agree</string>
    <string name="main_apni_salary_account_payu_me_open_krne_k_liye_sehemat_hu">Main apni salary account PayU me open krne k liye sehemat hu.</string>
    <string name="main_iske_dvaara_payu_ki_privacy_policy_aur_niyam_aur_sharto_se_sehemat_hu_jinhr_mere_dvaara_padha_aur_samjha_gaya_hai">Main iske dvaara PayU ki <a href="https://payu.in/privacy-policy">privacy policy</a> aur
        <a href="terms:">niyam aur sharto</a> se sehemat hu,jinhe mere dvaara padha aur samjha gaya hai.</string>
    <string name="main_iske_dvaara_payu_ki">I hereby irrevocably agree and acknowledge that, I have read and understood the Privacy Policy, SBM Terms and Conditions and User Terms and Conditions.</string>
    <string name="aur">aur</string>
    <string name="sehmat_hu">se sehemat hu,jinhe   </string>
    <string name="smjha_gaya_hai">mere dvaara padha aur samjha gaya hai. </string>
    <string name="main_apni_kyc_details_happy_or_loan_tap_k_sath_share_krne_k_liye_sehemat_hu">I hereby authorize PayU Payments Private Limited to share my profile and KYC details with Loantap (Lender) and SBM  (PPI Issuer) and I understand that my data shall be stored and processed in accordance with their respective privacy policies.</string>
    <string name="main_payu_ko_apne_account_me_paise_nikalne_or_dalne_ki_sehemati_pradan_krta_hu">Main PayU ko apne account me paise nikalne or dalne ki sehemati pradan krta hu.</string>
    <string name="agree_and_confirm_above_true">By agreeing, I hereby confirm that all the information provided herein by me is true and correct. </string>
    <string name="re_enter_passcode">Re-Enter Passcode</string>
    <string name="set_passcode">Set Passcode</string>
    <string name="enter_correct_passcode">Kripya Sahi Passcode Daliye</string>
    <string name="enter_passcode_empty">Passcode field should not be empty</string>
    <string name="re_enter_passcode_empty">Re-enter passcode field should not be empty</string>
    <string name="set_passcode_matching_error">Passcode match nahi hua hai. Kripya same passcode enter kariye</string>
    <string name="yeh_passcode_apse_login_krne_k_liye_puchha_jayega_jisse_apka_data_surakshit_rahega">Yeh apka login passcode hoga, Jisse apka account surakshit rahega. Kripya yeh passcode kisi k sath share na karien.</string>
    <string name="passcode_match_nahi_hua_hai_kripya_same_passcode_enter_kariye">Passcode match nahi hua hai.Kripya same passcode enter kariye</string>
    <string name="reset">Reset</string>
    <string name="enter_new_4_digit_passcode">Enter New 4 Digit Passcode</string>
    <string name="reset_passcode">Reset Passcode</string>
    <string name="account_opening">Account khola ja rha hai...</string>
    <string name="account_opening_message">Humein kuch samay or dein taki apka naya AdvancePay account khol sake.</string>
    <string name="in_progress_screen_title">In Progress</string>
    <string name="in_progress_screen_sub_title">Hum apki details verify kar rahe hai...</string>
    <string name="in_progress_screen_desc">Jaise hi apka account open ho jayega hum apko inform kar denge. Aapka account khulne me maximum 24 hours lag skte hain.</string>
    <string name="pan_number">PAN Number</string>
    <string name="verify">Verify</string>
    <string name="mobile_number_allowed_only_error">Special characters not allowed. Only 0-9 is allowed.</string>
    <string name="verify_pan_card_number">Verify PAN Card Number</string>
    <string name="mahesh_kumar_patil">Mahesh Kumar Patil</string>
    <string name="_203_sunshine_heights_tilak_road_near_walkheart_hospital_khar_west_mumbai_400045">203,Sunshine Heights,Tilak Road,Near Walkheart Hospital,Khar West,Mumbai 400045</string>
    <string name="badhaai_ho">Badhaai Ho</string>
    <string name="kripya_dhyaan_dein">Kripya Dhyaan Dein</string>
    <string name="technical_error_title_text">Kisi technical error k karan, Hum page load nahi kr pa rhe hai.</string>
    <string name="reload_page_message">Kripya firse page reload kariye ya fir exit kr k firse app open kariye.</string>
    <string name="reload_page_text">Reload Page</string>
    <string name="exit_text">Exit</string>
    <string name="open_wifi_settings_text">Open Wifi Settings</string>
    <string name="no_text">No</string>
    <string name="yes_block_text">Yes, Block</string>
    <string name="new_card_delivery_message">Apka naya card apke ghar pr agle 2-3 dino me deliver ho jayega aur Naye card ki kimat ₹150 apke account se kaat liye jayenge.</string>
    <string name="block_permanet_warning_message">Aap pakka apna card hamesha k liye block krna chahte hai!</string>
    <string name="kyonki">kyonki...</string>
    <string name="sorry_account_message">Sorry, Apka account nahi khola ja sakta hai.</string>
    <string name="not_eligible_for_services_message">Aap abhi humari services k liye eligible nahi hai.</string>
    <string name="user_name">Dear Customer,</string>
    <string name="no">Nahi</string>
    <string name="yes_agreed">Ha, Sure hu</string>
    <string name="are_you_sure_card_is_not_delivered">Kya aap sure hai ki apko card deliver nahi hua hai?</string>
</resources>