<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.activity.notVerifiedEmp.NotVerifiedEmpActivity">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_screen"
        android:padding="@dimen/main_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.payu.baas.coreUI.view.viewExtension.CustomTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/account_opening_top_margin"
                android:text="@string/user_name"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="@dimen/screen_title"
                app:custFont="@string/app_font_extra_bold" />

            <com.payu.baas.coreUI.view.viewExtension.CustomTextView
                android:id="@+id/not_eligible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/account_opening_top_margin"
                android:text="@string/sorry_account_message"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="@dimen/screen_title"
                app:custFont="@string/app_font_extra_bold" />

            <com.payu.baas.coreUI.view.viewExtension.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/account_opening_top_margin"
                android:text="@string/kyonki"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="@dimen/screen_title"
                app:custFont="@string/app_font_extra_bold" />

            <com.payu.baas.coreUI.view.viewExtension.CustomTextView
                android:id="@+id/verify_detail_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/account_opening_top_margin"
                android:text="@string/not_eligible_for_services_message"
                android:textAllCaps="false"
                android:textColor="@color/permission_text_color"
                android:textSize="@dimen/screen_title"
                app:custFont="@string/app_font_extra_bold" />


        </LinearLayout>


        <com.payu.baas.coreUI.view.viewExtension.CustomButton
            android:id="@+id/btExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/main_padding"
            android:background="@drawable/button_bg"
            android:onClick="openPreviousScreen"
            android:text="@string/exit_text"
            android:textAllCaps="false"
            app:custFont="@string/app_font_extra_bold" />


    </RelativeLayout>
</layout>