<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.common.ConfirmationDialogFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card_gray"
            android:layout_marginStart="@dimen/alert_margin"
            android:layout_marginEnd="@dimen/alert_margin"
            android:paddingLeft="@dimen/dp_24"
            android:paddingTop="@dimen/dp_22"
            android:paddingRight="@dimen/dp_24"
            android:paddingBottom="@dimen/dp_22">

            <com.payu.baas.coreUI.view.viewExtension.CustomTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/are_you_sure_card_is_not_delivered"
                android:textColor="@color/scandal"
                android:textSize="@dimen/sp_24"
                app:custFont="@string/app_font_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.payu.baas.coreUI.view.viewExtension.CustomTextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/are_you_sure_card_is_not_delivered"
                android:textColor="@color/scandal"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_14"
                app:custFont="@string/app_font_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


            <com.payu.baas.coreUI.view.viewExtension.CustomGradientTextView
                android:id="@+id/tvNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_24"
                android:text="@string/no"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_15"
                app:custFont="@string/app_font_semi_bold"
                app:layout_constraintEnd_toStartOf="@+id/tvYes"
                app:layout_constraintTop_toTopOf="@+id/tvYes" />

            <com.payu.baas.coreUI.view.viewExtension.CustomGradientTextView
                android:id="@+id/tvYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:text="@string/yes_agreed"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_15"
                app:custFont="@string/app_font_semi_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</layout>